# GIRAF-Learning

./: .dockerignore  .env.example  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  package.xml  requirements-noetic.txt  setup.py
control/: RRPRRR_kinematic_model.py  RUN_GIRAF_SIM.py  __init__.py
docs/: ROS1_REAL_ARM_TELEOP.md
giraf_optitrak_teleop/: __init__.py  deadman.py  geometry.py  health.py  interlock.py  natnet_receiver.py  node.py  robot_state.py
launch/: giraf_optitrak_teleop.launch
optitrak/: single_controller_teleop.py  single_controller_teleop_mjc_jacobian.py  stream_and_visualize_VELOCITY_COMMANDS.py  teleop.py  test.py
optitrak/.mplconfig/: fontlist-v390.json
optitrak/tests/: __init__.py  test_single_controller_teleop.py
scripts/: giraf_optitrak_teleop_node
sim_model/: README.md  __init__.py  __main__.py  requirements.txt  runner.py  scenes.py  sim.md  simulation.py
sim_model/models/: GIRAF.xml  GIRAF_banana.xml  GIRAF_bananas.xml  GIRAF_stiffness_test.xml  GIRAF_ycb.xml
sim_model/tests/: __init__.py  test_simulation.py
sim_model/utils/: download_ycb_objects.py  generate_ycb_xml.py
tests/: __init__.py  test_teleop_core.py
