<?xml version="1.0"?>
<package format="2">
  <name>giraf_optitrak_teleop</name>
  <version>0.1.0</version>
  <description>Safety-gated OptiTrack task-space teleoperation for the GIRAF arm.</description>

  <maintainer email="maintainer@example.com">GIRAF maintainers</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python3-setuptools</build_depend>

  <depend>geometry_msgs</depend>
  <depend>rosgraph</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-evdev</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-sympy</exec_depend>

  <export />
</package>
